use workaround for fixed background-image on ios

--- a/combat-sports-events/src/assets/base.css
+++ b/combat-sports-events/src/assets/base.css
@@ -133,16 +133,27 @@
   font-weight: normal;
 }
 
+html::before {
+  content: '';
+  display: block;
+  background-image: url('/images/boxing-ring.webp');
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -10;
+}
+
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   min-height: 100vh;
   color: var(--color-text);
-  /* background: var(--color-background); */
-  background: url('/images/boxing-ring.webp');
-  background-size: cover;
-  background-color: rgba(90, 133, 215, 0.4);
-  background-blend-mode: multiply;
-  background-attachment: fixed;
-  background-position: center;
   transition:
     color 0.5s,
     background-color 0.5s;
